fix nav overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1770,6 +1770,7 @@ input, select, textarea {
 /* Nav */
 
 	#nav {
+		overflow: auto;
 		text-align: center;
 		height: 4.25em;
 		cursor: default;
